--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,4 +4,21 @@ body
     color: lawngreen;
     text-align: center;
     font-family: "Arial";
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+#conteiner h1
+{
+    font-size: 20px;
 }
