--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,6 @@
 body
 {
-    background-color: black;
-    color: lawngreen;
+    color: #333;
     text-align: center;
     font-family: "Arial";
     font-size: 16px;
@@ -9,10 +8,26 @@ body
     padding: 0;
 }
 
+#cabecera
+{
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgb(24, 8, 167);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0px;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -21,4 +36,9 @@ body
 #conteiner h1
 {
     font-size: 20px;
+}
+
+#post
+{
+    padding: 1em;
 }
