--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,7 +12,7 @@ body
 #cabecera
 {
     background: #37488b;
-    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    box-shadow: 0px 2px 20px 0px rgb(24, 8, 167);
     color: white;
     font-weight: bold;
     margin: 0;
