--- a/css/estilos.css
+++ b/css/estilos.css
@@ -43,3 +43,11 @@ body
 {
     padding: 1em;
 }
+
+#footer
+{
+    background: rgb(31, 148, 168);
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
