--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,8 +11,8 @@ body
 
 #cabecera
 {
-    background: #37488b;
-    box-shadow: 0px 2px 20px 0px rgb(24, 8, 167);
+    background: #3755cc;
+    box-shadow: 0px 2px 20px 0px rgb(25, 8, 180);
     color: white;
     font-weight: bold;
     margin: 0;
