--- a/css/estilos.css
+++ b/css/estilos.css
@@ -51,3 +51,11 @@ body
     background: white;
     padding: 1em;
 }
+
+#footer
+{
+    background: #145da1;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
