--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,7 +11,7 @@ body
 
 #cabecera
 {
-    background: #3755cc;
+    background: #2082df;
     box-shadow: 0px 2px 20px 0px rgb(25, 8, 180);
     color: white;
     font-weight: bold;
@@ -54,7 +54,7 @@ body
 
 #footer
 {
-    background: #145da1;
+    background: #666;
     color: white;
     text-align: center;
     padding: 0.5em;
