--- a/css/estilos.css
+++ b/css/estilos.css
@@ -61,7 +61,7 @@ body
 
 #footer
 {
-    background: #666;
+    background: #2082df;
     color: white;
     text-align: center;
     padding: 0.5em;
